fix UUID==UUID (needs compare) and some FindBugs issues